44
================

02/02/21 utils.atoi strips leading 0, breaks phone comparison
02/02/21 Calendar view list/links don't work #961
01/02/21 Online form developer view without caching #960
27/01/21 Suggested linked emails when sending from animal/media
26/01/21 (depleted) stock level option to view 0 balances #637
26/01/21 Update Hebrew translation, rtl css (Saggi Neuemann)
25/01/21 csvimport: person should not be mandatory for 4,6,7
24/01/21 autocomplete attributes for username/passwords
24/01/21 document_repository service method to allow links to docs
24/01/21 Try to prevent browser autofill on email addresses
22/01/21 Preview incoming forms in a new page on mobile #932
22/01/21 Indicate adoptable status in mobile interface #27
22/01/21 Show a returning column on foster/retailer book
21/01/21 Support importing of animal logs #524
21/01/21 Fix focus bugs in TinyMCE 5 #938
21/01/21 Move owner req euth to Death, enable for non-shelter
19/01/21 Never overwrite RabiesTag with a blank
19/01/21 Add DisplayXIf* fields for PetPlan/form overlays
19/01/21 Online forms: support multiple ANDed showIf rules
19/01/21 Online forms: Yes/No defaults to blank so user must choose
19/01/21 Fix mail merge recipient list to cope with NULL
14/01/21 Showif can reference checkbox groups as nameI (0 based)
14/01/21 Cope with malformed showif rules
08/01/21 Option to skip fosterer emails if no medical items due
07/01/21 Fix for custom from addresses not loading
05/01/21 Searching does not trigger dirty form handling #492
05/01/21 Consistent transition speeds (and a little faster)
04/01/21 Do not clear the not for adoption flag during reclaim
02/01/21 Mail merge option to get the email recipient list #732
02/01/21 Refactor messy old address auto completion #562
02/01/21 Option to restrict state entry to US 2 letter codes #562
02/01/21 Exclude TNRs from annual figures species intake
31/12/20 Phone number formatting for US/UK/AU #499
31/12/20 Shelter view site mode #948