@@ -1,6 +1,7 @@
 44
 ================
 
+05/02/21 output for Yes/No additional fields in query builder
 02/02/21 utils.atoi strips leading 0, breaks phone comparison
 02/02/21 Calendar view list/links don't work #961
 01/02/21 Online form developer view without caching #960
